crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__int_only_dash.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"-\", integer)"
---
Error `Error while parsing 'Integer'` at 0:0 - 0:0

