crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__plus_int.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"+5356\", integer)"
---
Joined(Integer) `+5356` at 0:0 - 0:5

