crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__resloc_multi.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"path/to/somethig\", resource_location)"
---
Root(File)
Joined(ResourceLocation) `path/to/somethig` at 0:0 - 0:16

