crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__resloc_ns_empty.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\":\", resource_location)"
---
Joined(ResourceLocation) `:` at 0:0 - 0:1

