crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__resloc_ns_multi.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"namespace:path/to/thing\", resource_location)"
---
Joined(ResourceLocation) `namespace:path/to/thing` at 0:0 - 0:23

