crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__resloc_ns_single.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"namespace:single\", resource_location)"
---
Joined(ResourceLocation) `namespace:single` at 0:0 - 0:16

