crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__resloc_single.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"my_location\", resource_location)"
---
Root(File)
Joined(ResourceLocation) `my_location` at 0:0 - 0:11

