crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__signed_int.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"-23445\", integer)"
---
Root(File)
Joined(Integer) `-23445` at 0:0 - 0:6

