crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__unsigned_int.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"642345\", integer)"
---
Joined(Integer) `642345` at 0:0 - 0:6

