crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__uq_string_leftover.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"hello_word; rest of input\", uq_string)"
---
Root(File)
Joined(UnquotedString) `hello_word` at 0:0 - 0:10

