crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__util__tests__uq_string_mixed.snap
---
source: crates/mcf/src/syntax/grammar/util.rs
expression: "test(\"123qvr-wvg35.+\", uq_string)"
---
Root(File)
Joined(UnquotedString) `123qvr-wvg35.+` at 0:0 - 0:14

